--- a/angular.json
+++ b/angular.json
@@ -1,12 +1,12 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "330a7882-f4fa-43ad-ba14-30113749d16e"
+    "analytics": "f78b2520-ba76-46e9-9b4c-5c1ac3d7a0ea"
   },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "githubsearch-app": {
+    "GithubSearch": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -20,11 +20,12 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/githubsearch-app",
+            "outputPath": "dist/GithubSearch",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -36,6 +37,19 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -47,42 +61,25 @@
                   "maximumWarning": "2kb",
                   "maximumError": "4kb"
                 }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": false,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              ]
             }
-          },
-          "defaultConfiguration": "production"
+          }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "GithubSearch:build"
+          },
           "configurations": {
             "production": {
-              "browserTarget": "githubsearch-app:build:production"
-            },
-            "development": {
-              "browserTarget": "githubsearch-app:build:development"
+              "browserTarget": "GithubSearch:build:production"
             }
-          },
-          "defaultConfiguration": "development"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "githubsearch-app:build"
+            "browserTarget": "GithubSearch:build"
           }
         },
         "test": {
@@ -102,6 +99,31 @@
             "scripts": []
           }
         },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "tsconfig.app.json",
+              "tsconfig.spec.json",
+              "e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "GithubSearch:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "GithubSearch:serve:production"
+            }
+          }
+        },
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {}
@@ -109,5 +131,5 @@
       }
     }
   },
-  "defaultProject": "githubsearch-app"
+  "defaultProject": "GithubSearch"
 }
